<resources>
    <string name="app_name">Pig Dice</string>
    <string name="hold_button">Hold</string>
    <string name="roll_button">Roll</string>
    <string name="diceLeft_description">An image of a die\n</string>
    <string name="diceRight_description">An image of a die</string>
    <string name="loseImage">You Lose!</string>
    <string name="pig_dice">PIG DICE</string>
    <string name="computer_games_won_total">0</string>
    <string name="computer_name">Computer</string>
    <string name="computer_total_score">0</string>
    <string name="computer_turn_total">0</string>
    <string name="dice_total">0</string>
    <string name="dice_total_text">Dice Total</string>
    <string name="games_won_text">Games Won</string>
    <string name="total_score_text">Total Score </string>
    <string name="turn_total_text">Turn Total</string>
    <string name="you_name_text">You</string>
    <string name="user_games_won">0</string>
    <string name="user_total_score">0</string>
    <string name="user_turn_total">0</string>
    <string name="winner_image">Winner</string>
    <string name="you_rolled_a_one_computers_turn">You rolled a one\n\nComputer\'s Turn</string>
    <string name="you_rolled_snake_eyes_computers_turn">You rolled snake eyes\n\nComputer\'s Turn</string>
    <string name="notification">Notification</string>
    <string name="start_over">Start Over</string>
    <string name="computer_rolled_a_one">Computer rolled a one</string>
    <string name="computer_rolled_snake_eyes">Computer rolled snake eyes</string>
    <string name="your_turn">Your Turn</string>
    <string name="ok">OK</string>
    <string name="roll">Roll</string>
    <string name="computers_turn">Computer\'s Turn</string>
    <string name="pig_dice_the_game">Pig Dice\nThe Game!</string>
    <string name="about_button">About</string>
    <string name="support_button">Support</string>
    <string name="dino_image">Image of a dinosaur</string>
    <string name="pig_leader_board">Pig Leader Board</string>
    <string name="play_game">Play Game</string>
</resources>